Cleanup in Emscripten options Found out for fullscreen: Module function changed:   Old one was: requestFullScreen()   New one is : requestFullscreen()  (with a small 's' for 'screen')

--- a/tools/template_emscripten.html
+++ b/tools/template_emscripten.html
@@ -101,7 +101,7 @@
   </head>
   <body>
     <H1>GEOGRAM %EXENAME%</H1>
-    This is a <a href="http://alice.loria.fr/software/geogram/doc/html/index.html"> GEOGRAM </a> demo,
+    This is a <a href="https://github.com/BrunoLevy/geogram"> GEOGRAM </a> demo,
     compiled from C++ to Javascript using <a href="http://emscripten.org"> Emscripten </a>. 
     
     <div class="spinner" id='spinner'></div>
@@ -109,7 +109,7 @@
 
 <span id='controls'>
   <span>
-      <input type="button" value="Fullscreen" onclick="Module.requestFullScreen(false, true)"/>
+      <input type="button" value="Fullscreen" onclick="Module.requestFullscreen(false, true)"/>
       <input type="button" value="Show console" onclick="document.getElementById('output').style.display='block'">
       <span>add file: <input type="file" id="wps_id" onchange="fileSelectionCallback();"/></span>       
   </span>
